connect to database using Mongoose

--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
   "author": "Chinasa Agu Kalu",
   "license": "ISC",
   "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
+    "mongoose": "^6.2.0",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.15"
   }
