--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.17.2",
     "mongoose": "^6.2.0",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "slugify": "^1.6.5",
+    "validator": "^13.7.0"
   }
 }
