--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.2.0",
     "morgan": "^1.10.0",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "slugify": "^1.6.5",
     "validator": "^13.7.0"
