--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "multer": "^1.4.4",
     "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
+    "pug": "^3.0.2",
     "sharp": "^0.30.0",
     "slugify": "^1.6.5",
     "validator": "^13.7.0"
