Modify category model

--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
   "dependencies": {
     "bcrypt": "^5.0.1",
     "cloudinary": "^1.28.1",
+    "connect-mongo": "^4.6.0",
+    "connect-mongodb-session": "^3.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-mongo-sanitize": "^2.2.0",
     "express-rate-limit": "^6.1.0",
+    "express-session": "^1.17.2",
     "helmet": "^5.0.1",
     "hpp": "^0.2.3",
     "html-to-text": "^8.1.0",
