--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "pug": "^3.0.2",
     "sharp": "^0.30.0",
     "slugify": "^1.6.5",
+    "stripe": "^8.209.0",
     "validator": "^13.7.0",
     "xss-clean": "^0.1.1"
   }
