--- a/package.json
+++ b/package.json
@@ -47,5 +47,8 @@
     "eslint-plugin-prettier": "^4.0.0",
     "eslint-plugin-react": "^7.29.4",
     "prettier": "^2.5.1"
+  },
+  "engines": {
+    "node": ">=14.19.0"
   }
 }
